# riptide_launch

./: README.md
launch_msgs/: package.xml
launch_msgs/action/: BringupEnd.action  BringupStart.action
launch_msgs/msg/: ListBags.msg  ListPids.msg
launch_msgs/srv/: StartBag.srv  StopBag.srv  WhoIs.srv
launch_service_c/: CMakeLists.txt  package.xml
launch_service_c/include/launch_service_c/: bag_manager_c.h  bag_node_c.h  launch_manager_c.h  launch_monitor.hpp
launch_service_c/src/: bag_manager_c.cpp  bag_node_c.cpp  bag_service_c.cpp  launch_manager_c.cpp  launch_monitor.cpp  launch_monitor_child.cpp  launch_service_c.cpp
remote_launch/: package.xml  ros_launcher.service  setup.cfg  setup.py
remote_launch/launches/: liltank_launch.yaml  liltank_launch_sim_hil.yaml  talos_launch.yaml  talos_launch_bench.yaml  talos_launch_debug.yaml  talos_launch_sim_hil.yaml  talos_launch_simple.yaml
remote_launch/pages/: 403.html  404.html  help.html  index.html  main.js  page.html  style.css
remote_launch/remote_launch/: launcher.py
riptide_bringup/: package.xml  setup.cfg  setup.py
riptide_bringup/launch/: baggingLaunch.sh  bringup.launch.py  evaluateVoltages.py  fake_ekf_bringup.launch.py  monitorBattery.sh  playback.launch.py  pool.launch.py  simulation.launch.py  simulation_hardware.launch.py  simulation_hil.launch.py  simulation_life_support.launch.py  simulation_ros1.launch.py
riptide_bringup/launch/allTopics/: allTopics_0.db3  metadata.yaml
riptide_bringup/launch/vision/: metadata.yaml
ros2_launch_service/: README.md
ros2_launch_service/launch_msgs/: CMakeLists.txt  package.xml
ros2_launch_service/launch_msgs/action/: BringupStart.action
ros2_launch_service/launch_msgs/msg/: LaunchID.msg  ListLaunch.msg  TopicData.msg
ros2_launch_service/launch_msgs/srv/: BringupStatus.srv  ListLaunch.srv  StartLaunch.srv  StopLaunch.srv
ros2_launch_service/launch_service/: package.xml  setup.cfg  setup.py
ros2_launch_service/launch_service/launch_service/: install_service.py  ros_launcher.py
ros2_launch_service/launch_service_c/: CMakeLists.txt  COLCON_IGNORE  package.xml
ros2_launch_service/launch_service_c/include/launch_service_c/: launch_manager_c.h
ros2_launch_service/launch_service_c/launch/: example_launch.xml
ros2_launch_service/launch_service_c/src/: launch_manager_c.cpp  launch_service_c.cpp
